--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/image/brix.webp" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="Brix Academy | Digital SAT Simulator" />
+  <meta property="og:description" content="브릭스 학원 Digital SAT 모의시험 사이트" />
+  <meta property="og:image" content="/image/brix.webp" />
+  <title>Brix Academy | Digital SAT Simulator</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="https://www.desmos.com/api/v1.7/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
