--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/image/brix.webp" />
+  <link rel="manifest" href="manifest.json" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="Brix Academy | Digital SAT Simulator" />
   <meta property="og:description" content="브릭스 학원 Digital SAT 모의시험 사이트" />
